--- a/consciouslyrested.html
+++ b/consciouslyrested.html
@@ -11,7 +11,7 @@
     </style>
     <link rel="icon" type="" href="images/CRtoken_OG.png">
 </head>
-    <body class="dark">
+    <body class="">
         <header class="dark">
             <div class="logobox">
                 <a class="logo" href="index.html">Consciously Rested</a>
@@ -25,25 +25,16 @@
         </header>
     <main>
      <div class="yogaBody">
-        <img src="images/ArianeYoga1.png">
         <div class="CRbodytext">
             <p> Consciously Rested, a branch of Consciously Produced, embodies the belief that rest is essential for optimal performance. We curate mindful events and experiences designed to support relaxation and renewal, helping individuals recharge and thrive.</p>
-            <p>Our specialized retreats cater to the unique needs of your organization, offering an immersive experience focused on wellness, team building, personal growth, and strategic planning. These retreats are customizable to align with your goals, providing a combination of movement practices, mindfulness sessions, relaxation techniques, and work-focused sessions to rejuvenate your team and foster a positive, productive work environment.</p>
-            <p>We can also host sessions and workshops in your workspace, providing convenient, on-site opportunities for team revitalization.</p>
         </div>
-<div class="circleBody">
-    <div class="circlecontainer">
-        <div class="half-circle"></div>
-        <div class="circles">
-            <div class="circle">Yoga Classes</div>
-            <div class="circle">Meditation Workshops</div>
-            <div class="circle">Restorative Movement Sessions</div>
-            <div class="circle">Individual Sound Healing</div>
-            <div class="circle">Company Retreats</div>
+        <div class="circlerow">
+            <img src="images/CRinfographic.png">
         </div>
+    <div class="CRinfo">
+        <p>Our specialized retreats cater to the unique needs of your organization, offering an immersive experience focused on wellness, team building, personal growth, and strategic planning. These retreats are customizable to align with your goals, providing a combination of movement practices, mindfulness sessions, relaxation techniques, and work-focused sessions to rejuvenate your team and foster a positive, productive work environment.</p>
+        <p>We can also host sessions and workshops in your workspace, providing convenient, on-site opportunities for team revitalization.</p>
     </div>
-</div>
-     </div>
     </main>
     <footer>
         <p>SOCIAL MEDIA LINKS HERE</p>
