--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
      </nav>
 </header>
 </header>
-    <main>
+    <main class="contactbackground">
         <div class="getintouch">
             <p class="faqtitle">
                 get in touch
