--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,52 +10,126 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
     </style>
-     <link rel="icon" type="" href="images/CPtoken_OG.png">
+    <link rel="icon" type="" href="images/CPtoken_OG.png">
 </head>
+
 <body class="light">
     <header>
-        <div class="logobox">
-            <a class="logo" href="index.html">Consciously Produced</a>
+        <div class="siteTitle">
+            <a class="name" href="/index.html">Consciously Produced</a>
+            <nav>
+                <a href="/about.html">About</a>
+                <a href="/projects.html">Projects</a>
+                <a href="/consciouslyrested.html">Rested</a>
+                <a href="/contact.html">Contact</a>
+            </nav>
         </div>
-        <nav>
-            <a href="about.html">about</a>
-            <a href="projects.html">projects</a>
-            <a href="consciouslyrested.html">consciously rested</a>
-            <a href="contact.html">contact</a>
-         </nav>
-</header>
+    </header>
     <main>
-        <div class="aboutbackground">
-        <div class="bioSection">
-            <img src="images/ariane_gradienthalo.png" alt="Ariane's headshot image">
-            <div> <p class="bioTitle">Ariane Michaud</p>
-                <p class="bioRole">founder & CEO</p>
-                <p class="bioText">
-                    Ariane Michaud has worked as a producer and creative consultant for over a decade, building and strengthening communities that support the arts and advance social justice. Her expertise lies in strategic planning—she believes that a solid plan is the foundation of success. Yet, her true passion is collaborating with others to bring their visions to life, especially when projects involve interdisciplinarity, technology, and bold (sometimes almost impossible) ideas. When Ariane isn’t busy bringing ambitious ideas to life, she’s cultivating her passion for movement and mindfulness. She is a practicing dancer, yoga teacher, and occasional van lifer, always seeking community wherever she goes.
-                    </p></div>
+        <div class="aboutField">
+            <div class="headshotImage">
+                <img src="/images/arianeHeadshot.png" alt="">
+            </div>
+            <div class="bioText">
+                <h1>Ariane Michaud</h1>
+                <h2>founder & CEO</h2>
+                <p>Ariane Michaud has worked as a producer and creative consultant for over a decade, building and
+                    strengthening communities that support the arts and advance social justice. Her expertise lies in
+                    strategic planning—she believes that a solid plan is the foundation of success. Yet, her true
+                    passion is collaborating with others to bring their visions to life, especially when projects
+                    involve interdisciplinarity, technology, and bold (sometimes almost impossible) ideas. When Ariane
+                    isn’t busy bringing ambitious ideas to life, she’s cultivating her passion for movement and
+                    mindfulness. She is a practicing dancer, yoga teacher, and occasional van lifer, always seeking
+                    community wherever she goes.</p>
+            </div>
         </div>
-
+        <div class="aboutField">
+            <div class="headshotImage">
+                <img src="/images/noorHeadshot.png" alt="">
+            </div>
+            <div class="bioText">
+                <h1>Collaborator: Noor Kaffarani</h1>
+                <h2>Project Coordinator: Dances with Robots</h2>
+                <p>Noor Kaffarani is a Bachelor of Science dance graduate from Wayne State University and a dance
+                    instructor
+                    and performer across Michigan. During her time at Wayne State, Noor participated in diverse
+                    repertoires
+                    and dance companies, including To Sangana African Dance Company and Dance Workshop. She served as a
+                    movement constructionist and performer for Dance Workshop, co-choreographing and performing in their
+                    evening-length work, RITUAL BEING. Noor has worked under the direction of various guest artists and
+                    Wayne faculty, including Joshua L. Peugh in his work “PINK,” Amy Miller in “Suerza,” Karen Prall,
+                    Lisa
+                    LaMarre Wilmot, Jessica Rajko, Dr. RAS Mikey Courtney, and Hannah Andersen, gaining a comprehensive
+                    and
+                    foundational movement vocabulary. She joined Contexture Dance Detroit under the Artistic Direction
+                    of
+                    Tracy Halloran as a main company member for their 11th season, learning works from Douglas
+                    Burkhardt,
+                    Alyssa Brutlag, Jillian Hopper, and Tracy Halloran.
+                    Currently, Noor is apprenticing with Detroit Dance Collective for their 45th season to further
+                    enhance
+                    her training. Through these experiences, she has cultivated a unique and insightful perspective that
+                    informs her pedagogical methods and artistry, which she utilizes across interdisciplinary mediums.
+                    She
+                    is excited to join Consciously Produced, eager to lend her combined knowledge and skills to support
+                    and
+                    foster a rich space for innovation.</p>
+            </div>
+        </div>
+        <div class="aboutField">
+            <div class="headshotImage">
+                <img src="/images/martinHeadshot.png" alt="">
+            </div>
+            <div class="bioText">
+                <h1>Collaborator: Martin Nuñez-Bonilla</h1>
+                <h2>Marketing & Design Consultant</h2>
+                <p>Martin is a visual media specialist, social media strategist, and public speaker based in New York
+                    City. He currently works for the National Basketball Association as a video editor. Martin is also
+                    the creator of MEN CRY, an unscripted video series and digital platform for exploring authenticity
+                    and emotional honesty beyond societal and gender norms.</p>
+            </div>
+        </div>
         <div>
-            <p class="collaboratorTitle">Testimonials</p>
+            <div class="testimonialTitle">
+                <img src="/images/blank_gradient_circle_reef_sunset.png" alt="">
+                <h1>Testimonials</h1>
+                <img src="/images/blank_gradient_circle_reef_sunset.png" alt="">
+            </div>
+            <div class="testimonialBlockleft">
+                <img src="/images/Kevin-Clark-headshot.png">
+                <div>
+                    <p>Ariane is an amazing strategist and leader. She is unfailingly clear-eyed about where an
+                        organization
+                        needs to go, and how to lead a team to get there. She sees what others miss, and ensures that
+                        every
+                        team member has their needs met so that they can bring their whole selves to work, and
+                        creatively
+                        solve problems in their own way.</p>
+                    <p class="bold">Kevin Clark</p>
+                </div>
+            </div>
+            <div class="testimonialBlockright">
+                <div>
+                    <p>Ariane is one of the most focused, driven, ambitious and passionate culture warriors I know. I
+                        hire
+                        her literally whenever I can.</p>
+                    <p class="bold">Sydney Skybetter</p>
+                </div>
+                <img src="/images/sydneyHeadshot.png">
+            </div>
+            <div class="testimonialBlockleft">
+                <img src="/images/meganHeadshot.jpg">
+                <div>
+                    <p>Ariane was always professional, resourceful, organized, creative, reliable and immensely
+                        supportive.
+                        She rose to every challenge, providing educational insight, and intuitively understood when
+                        necessary steps needed attention. "How is this working for you? and "How can I help you?" were
+                        always her questions for me. I have seen her working in other scenarios, and have always been
+                        inspired by her clarity and tenacity.</p>
+                    <p class="boldText">Megan Williams</p>
+                </div>
+            </div>
         </div>
-        <div class="testimonialBlockleft">
-            <img src="">
-            <p>Ariane is an amazing strategist and leader. I've worked with Ariane on a variety of projects, including traveling together to lead workshops, producing a conference, and being custodians of a community of artists and technologists over five plus years. It's been a privilege to work with Ariane. - Kevin Clark</p>
-        </div>
-        <div class="testimonialBlockright"> 
-            <p>Ariane was always professional, resourceful, organized, creative, reliable and immensely supportive. She rose to every challenge, providing educational insight, and intuitively understood when necessary steps needed attention. "How is this working for you? and "How can I help you?" were always her questions for me. I have seen her working in other scenarios, and have always been inspired by her clarity and tenacity. - Megan Williams (Megan Williams Dance Company, NYC)</p>
-            <img src="">
-        </div>
-        <div class="testimonialBlockleft"> 
-            <img src="">
-            <p>Ariane Michaud is a talented project visionary and manager. Working with Ariane in the contemporary dance field, I have seen her holistically assist artists in developing, planning, managing and finding financial support for a concept from inception to final presentation. - Lauren Parrish (Abrons Arts Center, NYC)</p>
-        </div>
-        <div class="testimonialBlockright">
-            <p>Ariane is one of the most focused, driven, ambitious and passionate culture warriors I know. I hire her literally whenever I can. - Sydney Skybetter</p>
-            <img src="">
-        </div>
-        <div class="space"></div>
-    </div>
     </main>
     <footer>
         <p>SOCIAL MEDIA LINKS HERE</p>
@@ -63,4 +138,5 @@
         <p>Any other standard boiler plate language can go here if needed.</p>
     </footer>
 </body>
+
 </html>
