--- a/consciouslyrested.html
+++ b/consciouslyrested.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,40 +8,48 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
-       @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
     </style>
-    <link rel="icon" type="" href="images/CRtoken_OG.png">
+    <link rel="icon" type="" href="images/CPtoken_OG.png">
 </head>
-    <body class="">
-        <header class="dark">
-            <div class="logobox">
-                <a class="logo" href="index.html">Consciously Rested</a>
-            </div>
-                <nav>
-                    <a href="about.html">about</a>
-                    <a href="projects.html">projects</a>
-                    <a href="consciouslyrested.html">consciously rested</a>
-                    <a href="contact.html">contact</a>
-                 </nav>
-        </header>
+
+<body class="light">
+    <header class="CRheader">
+        <div class="siteTitle">
+            <a class="name" href="/index.html">Consciously Produced</a>
+            <nav>
+                <a href=" /about.html">About</a>
+                <a href="/projects.html">Projects</a>
+                <a href="/consciouslyrested.html">Rested</a>
+                <a href="/contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
     <main>
-     <div class="yogaBody">
-        <div class="CRbodytext">
-            <p> Consciously Rested, a branch of Consciously Produced, embodies the belief that rest is essential for optimal performance. We curate mindful events and experiences designed to support relaxation and renewal, helping individuals recharge and thrive.</p>
+        <h2 class="crAbout">Consciously Rested, a branch of Consciously Produced, embodies the belief that rest is
+            essential for optimal performance. We curate mindful events and experiences designed to support relaxation
+            and renewal, helping individuals recharge and thrive.</h2>
+        <div class="bubbles">
+            <img src="/images/CR_bubbles.png">
         </div>
-        <div class="circlerow">
-            <img src="images/CRinfographic.png">
+        <h2 class="crAbout noTopMargin">
+            We host sessions and workshops in your workspace, providing convenient, on-site opportunities for team
+            revitalization.
+        </h2>
+        <h2 class="crAbout">Our specialized retreats cater to the unique needs of your organization, offering an
+            immersive experience
+            focused on wellness, team building, personal growth, and strategic planning. These retreats are customizable
+            to align with your goals and needs. </h2>
+        <div>
+            <img class="yogaImage" src="/images/ariane_yoga.png" alt="">
+            <img class="yogaToken" src="/images/CRtoken_OG.png" alt="">
         </div>
-    <div class="CRinfo">
-        <p>Our specialized retreats cater to the unique needs of your organization, offering an immersive experience focused on wellness, team building, personal growth, and strategic planning. These retreats are customizable to align with your goals, providing a combination of movement practices, mindfulness sessions, relaxation techniques, and work-focused sessions to rejuvenate your team and foster a positive, productive work environment.</p>
-        <p>We can also host sessions and workshops in your workspace, providing convenient, on-site opportunities for team revitalization.</p>
-    </div>
-    </main>
-    <footer>
-        <p>SOCIAL MEDIA LINKS HERE</p>
-        <p>Copyright ConsciouslyProduced 2024</p>
-        <p>Logo designed by Martin Bonilla</p>
-        <p>Any other standard boiler plate language can go here if needed.</p>
-    </footer>
+        <footer>
+            <p>SOCIAL MEDIA LINKS HERE</p>
+            <p>Copyright ConsciouslyProduced 2024</p>
+            <p>Logo designed by Martin Bonilla</p>
+            <p>Any other standard boiler plate language can go here if needed.</p>
+        </footer>
 </body>
+
 </html>
