--- a/contact.html
+++ b/contact.html
@@ -1,125 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About</title>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/styles.css">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
-        </style>
-         <link rel="icon" type="" href="images/CPtoken_OG.png">
-    </head>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
+  </style>
+  <link rel="icon" type="" href="images/CPtoken_OG.png">
+</head>
+
 <body class="light">
   <header>
-    <div class="logobox">
-        <a class="logo" href="index.html">Consciously Produced</a>
+    <div class="siteTitle">
+      <a class="name" href="/index.html">Consciously Produced</a>
+      <nav>
+        <a href="/about.html">About</a>
+        <a href="/projects.html">Projects</a>
+        <a href="/consciouslyrested.html">Rested</a>
+        <a href="/contact.html">Contact</a>
+      </nav>
     </div>
-    <nav>
-        <a href="about.html">about</a>
-        <a href="projects.html">projects</a>
-        <a href="consciouslyrested.html">consciously rested</a>
-        <a href="contact.html">contact</a>
-     </nav>
-</header>
-</header>
-    <main class="contactbackground">
-        <div class="getintouch">
-            <p class="faqtitle">
-                get in touch
-            </p>
-            <p>
-                Speak with founder Ariane Michaud about your project. 
-                Email us at ariane@consciouslyproduced.com or sign up for a call below. 
-            </p>
-            <a href="https://calendly.com/ariane-lylr/letschat">
-                <button type="button" class="calendlybutton">calendly</button>
-            </a>
-        </div>
+  </header>
+  </header>
+  <main class="contactbackground">
+    <div class="getintouch">
+      <p class="faqtitle">
+        get in touch
+      </p>
+      <p>
+        Speak with founder Ariane Michaud about your project.
+        Email us at ariane@consciouslyproduced.com or sign up for a call below.
+      </p>
+      <a href="https://calendly.com/ariane-lylr/letschat">
+        <button type="button" class="calendlybutton">calendly</button>
+      </a>
+    </div>
     <p class="faqtitle">consciously produced faq</p>
-<button type="button" class="collapsible">What types of events do you specialize in producing?</button>
-<div class="content">
-  <p>At Consciously Produced LLC, we specialize in a wide range of creative event productions, including conferences, dance and theater performances, podcasts, fundraisers, and more. Our expertise spans various industries and formats, allowing us to tailor our services to meet the unique needs of each client.</p>
-</div>
-<button type="button" class="collapsible">How do you approach collaboration with clients?</button>
-<div class="content">
-  <p>We view our clients as collaborators, not just patrons. We work closely with you to understand your vision, goals, and objectives for the event. Your input is essential throughout the entire production process, ensuring that the final result authentically represents your vision and resonates with your audience.</p>
-</div>
-<button type="button" class="collapsible">What role can you play in my event?</button>
-<div class="content">
-  <p>Depending on your needs and preferences, we can act as consultants, partnering producers, or full-event producers. During our initial meetings together, we'll discuss the scope of your project and determine the most suitable role for us to play in bringing your vision to life.</p>
-</div>
-<button type="button" class="collapsible">Can you provide examples of past projects you've worked on?</button>
-<div class="content">
-  <p>Certainly! We have a diverse portfolio of past projects here. [LINK]</p>
-</div>
-</div>
-   </div>
+    <button type="button" class="collapsible">What types of events do you specialize in producing?</button>
+    <div class="content">
+      <p>At Consciously Produced LLC, we specialize in a wide range of creative event productions, including
+        conferences, dance and theater performances, podcasts, fundraisers, and more. Our expertise spans various
+        industries and formats, allowing us to tailor our services to meet the unique needs of each client.</p>
+    </div>
+    <button type="button" class="collapsible">How do you approach collaboration with clients?</button>
+    <div class="content">
+      <p>We view our clients as collaborators, not just patrons. We work closely with you to understand your vision,
+        goals, and objectives for the event. Your input is essential throughout the entire production process, ensuring
+        that the final result authentically represents your vision and resonates with your audience.</p>
+    </div>
+    <button type="button" class="collapsible">What role can you play in my event?</button>
+    <div class="content">
+      <p>Depending on your needs and preferences, we can act as consultants, partnering producers, or full-event
+        producers. During our initial meetings together, we'll discuss the scope of your project and determine the most
+        suitable role for us to play in bringing your vision to life.</p>
+    </div>
+    <button type="button" class="collapsible">Can you provide examples of past projects you've worked on?</button>
+    <div class="content">
+      <p>Certainly! We have a diverse portfolio of past projects here. [LINK]</p>
+    </div>
+    </div>
+    </div>
 
-   <p class="faqtitle">consciously rested faq</p>
-   <button type="button" class="collapsibledark">What services does Consciously Rested offer?</button>
-   <div class="content">
-     <p>Consciously Rested offers a range of wellness services including group and private yoga classes, meditation workshops, restorative movement sessions, individual sound healings, and customizable wellness retreats.</p>
-   </div>
-   <button type="button" class="collapsibledark"> Are your wellness services suitable for corporate and nonprofit clients?</button>
-   <div class="content">
-     <p>Yes, our wellness services are tailored specifically for corporate and nonprofit clients. We provide solutions that cater to organizational needs, including team-building activities, strategic planning workshops, and personalized wellness programs.</p>
-   </div>
-   <button type="button" class="collapsibledark">Can you host wellness sessions at our office?</button>
-   <div class="content">
-     <p>Absolutely! We can host half-day or full-day wellness sessions directly at your office, or bring specialized workshops to your workspace, providing convenient, on-site opportunities for team revitalization.</p>
-   </div>
-   <button type="button" class="collapsibledark">What are your specialized retreats like?</button>
-   <div class="content">
-     <p>Our specialized retreats are designed to address your organization’s unique needs, combining movement practices, mindfulness sessions, relaxation techniques, and of course, some work and strategic planning sessions. These retreats aim to enhance team bonding, personal growth, and overall well-being.</p>
-   </div>
-   <button type="button" class="collapsibledark">How can I get more information about your pricing?</button>
-   <div class="content">
-     <p>For detailed information on pricing and to discuss your specific needs, please reach out to us directly. We are happy to provide a customized quote based on the services you are interested in.</p>
-   </div>
-      </div>
-   <script>
-    var coll = document.getElementsByClassName("collapsible");
-    var i;
-    
-    for (i = 0; i < coll.length; i++) {
-      coll[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var content = this.nextElementSibling;
-        if (content.style.maxHeight){
-          content.style.maxHeight = null;
-        } else {
-          content.style.maxHeight = content.scrollHeight + "px";
-        }
-      });
-    }
-    </script>
-<script>
-  var coll = document.getElementsByClassName("collapsibledark");
-  var i;
-  
-  for (i = 0; i < coll.length; i++) {
-    coll[i].addEventListener("click", function() {
-      this.classList.toggle("active");
-      var content = this.nextElementSibling;
-      if (content.style.maxHeight){
-        content.style.maxHeight = null;
-      } else {
-        content.style.maxHeight = content.scrollHeight + "px";
+    <p class="faqtitle">consciously rested faq</p>
+    <button type="button" class="collapsibledark">What services does Consciously Rested offer?</button>
+    <div class="content">
+      <p>Consciously Rested offers a range of wellness services including group and private yoga classes, meditation
+        workshops, restorative movement sessions, individual sound healings, and customizable wellness retreats.</p>
+    </div>
+    <button type="button" class="collapsibledark"> Are your wellness services suitable for corporate and nonprofit
+      clients?</button>
+    <div class="content">
+      <p>Yes, our wellness services are tailored specifically for corporate and nonprofit clients. We provide solutions
+        that cater to organizational needs, including team-building activities, strategic planning workshops, and
+        personalized wellness programs.</p>
+    </div>
+    <button type="button" class="collapsibledark">Can you host wellness sessions at our office?</button>
+    <div class="content">
+      <p>Absolutely! We can host half-day or full-day wellness sessions directly at your office, or bring specialized
+        workshops to your workspace, providing convenient, on-site opportunities for team revitalization.</p>
+    </div>
+    <button type="button" class="collapsibledark">What are your specialized retreats like?</button>
+    <div class="content">
+      <p>Our specialized retreats are designed to address your organization’s unique needs, combining movement
+        practices, mindfulness sessions, relaxation techniques, and of course, some work and strategic planning
+        sessions. These retreats aim to enhance team bonding, personal growth, and overall well-being.</p>
+    </div>
+    <button type="button" class="collapsibledark">How can I get more information about your pricing?</button>
+    <div class="content">
+      <p>For detailed information on pricing and to discuss your specific needs, please reach out to us directly. We are
+        happy to provide a customized quote based on the services you are interested in.</p>
+    </div>
+    </div>
+    <script>
+      var coll = document.getElementsByClassName("collapsible");
+      var i;
+
+      for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          var content = this.nextElementSibling;
+          if (content.style.maxHeight) {
+            content.style.maxHeight = null;
+          } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+          }
+        });
       }
-    });
-  }
-  </script>
+    </script>
+    <script>
+      var coll = document.getElementsByClassName("collapsibledark");
+      var i;
+
+      for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          var content = this.nextElementSibling;
+          if (content.style.maxHeight) {
+            content.style.maxHeight = null;
+          } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+          }
+        });
+      }
+    </script>
     <div>
 
     </div>
-    </main>
-    <footer>
-        <p>SOCIAL MEDIA LINKS HERE</p>
-        <p>Copyright ConsciouslyProduced 2024</p>
-        <p>Logo designed by Martin Bonilla</p>
-        <p>Any other standard boiler plate language can go here if needed.</p>
-    </footer>
+  </main>
+  <footer>
+    <p>SOCIAL MEDIA LINKS HERE</p>
+    <p>Copyright ConsciouslyProduced 2024</p>
+    <p>Logo designed by Martin Bonilla</p>
+    <p>Any other standard boiler plate language can go here if needed.</p>
+  </footer>
 </body>
+
 </html>
