--- a/projects.html
+++ b/projects.html
@@ -1,66 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
     </style>
-     <link rel="icon" type="" href="images/CPtoken_OG.png">
+    <link rel="icon" type="" href="images/CPtoken_OG.png">
 </head>
+
 <body class="light">
     <header>
-        <div class="logobox">
-            <a class="logo" href="index.html">Consciously Produced</a>
+        <div class="siteTitle">
+            <a class="name" href="/index.html">Consciously Produced</a>
+            <nav>
+                <a href="/about.html">About</a>
+                <a href="/projects.html">Projects</a>
+                <a href="/consciouslyrested.html">Rested</a>
+                <a href="/contact.html">Contact</a>
+            </nav>
         </div>
-        <nav>
-            <a href="about.html">about</a>
-            <a href="projects.html">projects</a>
-            <a href="consciouslyrested.html">consciously rested</a>
-            <a href="contact.html">contact</a>
-         </nav>
-</header>
-    <main class="projectbody">
-<div class="projectBlocks">
-    <div class="container crciproject">
-        <img src="images/CRCI20172.png" alt="Avatar" class="image">
-        <div class="overlay">
-            <div class="text">A continuation of founder Ariane Michaud’s work on the first season of the podcast, Consciously Produced is now supporting the production of the second season, with Ariane taking on a role as one of the main hosts. More information at www.danceswithrobots.org </div>
+    </header>
+    <main>
+        <h1 class="projectTitle">Current Projects</h1>
+        <div class="projectbody">
+            <div class="projectBlock">
+                <a href="https://danceswithrobots.org/"> <img src="/images/CRCI_Version03.jpg"> </a>
+            </div>
+            <div class="projectBlock">
+                <a href="https://choreographicinterfaces.org/"><img src="/images/crci_interim.png"> </a>
+            </div>
+            <div class="projectBlock">
+                <a href="https://www.sparkhabits.com/"><img src="/images/sparkhabits_logo.png"></a>
+            </div>
         </div>
-    </div> 
-    <div class="container project2">
-        <img src="images/SparkHabits_Branding_Logo_Black.png" alt="Avatar" class="image">
-        <div class="overlay">
-            <div class="text">Consciously Produced is currently serving as the strategic planning consultant for this exciting, coming soon, behavior change app. </div>
-        </div>
-    </div>        
-</div>
-<div class="projectBlocks"></div>
-    <div class="container">
-        <img src="images/CRCI_Version03.jpg" alt="Avatar" class="image">
-        <div class="overlay">
-            <div class="text">A continuation of founder Ariane Michaud’s work on the first season of the podcast, Consciously Produced is now supporting the production of the second season, with Ariane taking on a role as one of the main hosts. More information at www.danceswithrobots.org </div>
-        </div>
-    </div>    
-</div>
-<!--<div class="projectBlocks">
-    <div class="container">
-        <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
-        <div class="overlay">
-            <div class="text">Hello World</div>
-        </div>
-    </div> 
-    <div class="container">
-        <img src="images/CRCI_Version01.jpg" alt="Avatar" class="image">
-        <div class="overlay">
-            <div class="text">Hello World</div>
-        </div>
-    </div>        
-</div>-->
-           
+
+
     </main>
     <footer>
         <p>SOCIAL MEDIA LINKS HERE</p>
@@ -69,4 +48,5 @@
         <p>Any other standard boiler plate language can go here if needed.</p>
     </footer>
 </body>
+
 </html>
